# forge-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/scaffold/: mod.rs
templates/firebase-dioxus/: .env.example  Cargo.toml
templates/firebase-dioxus/src/: firebase.rs  lib.rs  main.rs
templates/firebase-htmx/: .env.example  Cargo.toml
templates/firebase-htmx/src/: firebase.rs  main.rs
templates/mongodb-dioxus/: Cargo.toml
templates/mongodb-dioxus/src/: db.rs  lib.rs  main.rs
templates/mongodb-htmx/: .env.example  Cargo.toml
templates/mongodb-htmx/src/: db.rs  main.rs
templates/mysql-dioxus/: Cargo.toml
templates/mysql-dioxus/src/: db.rs  lib.rs  main.rs
templates/mysql-htmx/: Cargo.toml
templates/mysql-htmx/src/: db.rs  main.rs
templates/postgres-dioxus/: .env.example  Cargo.toml  Dioxus.toml  index.html
templates/postgres-dioxus/src/: db.rs  lib.rs  main.rs
templates/postgres-htmx/: Cargo.toml
templates/postgres-htmx/src/: db.rs  main.rs
templates/static-dioxus/: Cargo.toml  Dioxus.toml
templates/static-dioxus/src/: lib.rs  main.rs
templates/static-htmx/: Cargo.toml
templates/static-htmx/src/: main.rs
tests/: cli.rs
