[package]
name = "trestle"
version = "0.1.0"
edition = "2021"

# --- UPDATED METADATA ---
authors = ["Jonathan Reeves programmingwithjon@gmail.com"]
description = "A CLI tool to scaffold Rust web applications with Axum, Dioxus, or HTMX."
readme = "README.md"
repository = "https://github.com/RedHoodJT1988/trestle"
license = "MIT"
keywords = ["web", "framework", "scaffold", "dioxus", "htmx", "trestle"]
categories = ["command-line-utilities", "web-programming"]
# --- END METADATA ---

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
assert_fs = "1.1"