[package]
name = "__PROJECT_NAME__"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.1", features = ["web"] }
dioxus-web = "0.5.1"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }